src/tests/fixtures/arguments/PromiseArgument.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export default class SomeType {
  /** @gqlField */
  hello(args: { greeting: Promise<string> }): string {
    return `${args.greeting} world!`;
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/arguments/PromiseArgument.invalid.ts:4:27 - error: Unable to resolve type reference. In order to generate a GraphQL schema, Grats needs to determine which GraphQL type is being referenced. This requires being able to resolve type references to their `@gql` annotated declaration. However this reference could not be resolved. Is it possible that this type is not defined in this file?

4   hello(args: { greeting: Promise<string> }): string {
                            ~~~~~~~~~~~~~~~
